--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -35,6 +35,7 @@ jobs:
           chmod +x bsp
           rsync -a ../build-tool/* ../bsp/*
           ls -a
+          cat linux/rk356x/fork.conf
           ./bsp --long-version -r radxa linux rk356x
 
       - name: little hack for github uploads
