--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -33,7 +33,7 @@ jobs:
           git clone -b stable https://github.com/openhd/bsp
           cd bsp
           chmod +x bsp
-          rsync -av ../build-tool/* ../bsp/*
+          rsync -v -I ../build-tool/* ../bsp/*
           cat linux/rk356x/fork.conf
 
       - name: build kernel
