--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -34,6 +34,8 @@ jobs:
           cd bsp
           chmod +x bsp
           rsync -rv -I ../build-tool/ ../bsp/
+          rm -Rf ../overlays/Makefile
+          rsync -rv -I ../overlays/ ../
           cat linux/rk356x/fork.conf
 
       - name: build kernel
