--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -35,7 +35,7 @@ jobs:
           git clone -b stable https://github.com/openhd/bsp
           cd bsp
           chmod +x bsp
-          sed -i 's/BSP_BRANCH="[^"]*"/BSP_BRANCH="'"$BRANCH"'"/' linux/rk356x/fork.conf
+          sed -i 's#BSP_BRANCH="[^"]*"#BSP_BRANCH="'"$BRANCH"'"#' bsp/linux/rk356x/fork.conf
           cat linux/rk356x/fork.conf
 
       - name: build kernel
