--- a/arch/arm64/configs/rockchip_linux_defconfig
+++ b/arch/arm64/configs/rockchip_linux_defconfig
@@ -618,8 +618,10 @@ CONFIG_STMMAC_ETH=y
 # CONFIG_NET_VENDOR_TI is not set
 # CONFIG_NET_VENDOR_VIA is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
+CONFIG_MOTORCOMM_PHY=y
 CONFIG_REALTEK_PHY=y
 CONFIG_ROCKCHIP_PHY=y
+CONFIG_RK630_PHY=y
 CONFIG_PPP=m
 CONFIG_PPP_BSDCOMP=m
 CONFIG_PPP_DEFLATE=m
@@ -850,6 +852,7 @@ CONFIG_ROCKCHIP_DW_DP=y
 CONFIG_ROCKCHIP_INNO_HDMI=y
 CONFIG_ROCKCHIP_LVDS=y
 CONFIG_ROCKCHIP_RGB=y
+CONFIG_ROCKCHIP_DW_HDCP2=y
 CONFIG_DRM_PANEL_SIMPLE=y
 CONFIG_DRM_PANEL_JADARD_JD9365DA_H3=y
 CONFIG_DRM_PANEL_RADXA_DISPLAY_8HD=y
@@ -907,6 +910,7 @@ CONFIG_SND_SOC=y
 CONFIG_SND_SOC_ROCKCHIP=y
 CONFIG_SND_SOC_ROCKCHIP_I2S_TDM=y
 CONFIG_SND_SOC_ROCKCHIP_PDM=y
+CONFIG_SND_SOC_ROCKCHIP_SAI=y
 CONFIG_SND_SOC_ROCKCHIP_SPDIF=y
 CONFIG_SND_SOC_ROCKCHIP_SPDIFRX=y
 CONFIG_SND_SOC_ROCKCHIP_MAX98090=y
@@ -922,6 +926,7 @@ CONFIG_SND_SOC_ES8323=y
 CONFIG_SND_SOC_ES8326=y
 CONFIG_SND_SOC_RK3308=y
 CONFIG_SND_SOC_RK3328=y
+CONFIG_SND_SOC_RK3528=y
 CONFIG_SND_SOC_RK817=y
 CONFIG_SND_SOC_RK_CODEC_DIGITAL=y
 CONFIG_SND_SOC_RT5616=y
@@ -1122,8 +1127,11 @@ CONFIG_CPU_PX30=y
 CONFIG_CPU_RK1808=y
 CONFIG_CPU_RK3328=y
 CONFIG_CPU_RK3399=y
+CONFIG_CPU_RK3528=y
+CONFIG_CPU_RK3562=y
 CONFIG_CPU_RK3568=y
 CONFIG_CPU_RK3588=y
+CONFIG_ROCKCHIP_AMP=y
 CONFIG_ROCKCHIP_CPUINFO=y
 CONFIG_ROCKCHIP_GRF=y
 CONFIG_ROCKCHIP_IODOMAIN=y
