--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -35,7 +35,8 @@ jobs:
           git clone https://github.com/radxa-repo/bsp
           cd bsp
           chmod +x bsp
-          sed -i '/local kernelversion="\$(bsp_version)"/a     local DATE=$(date +'%Y-%m-%d-%H-%M')' lib/linux.sh
+          sed -i '/local kernelversion="\$(bsp_version)"/a \     local DATE=$(date +'%Y-%m-%d-%H-%M')' lib/linux.sh
+          sed -i 's/LOCALVERSION=-$PKG_REVISION-$FORK KERNELRELEASE=$kernelversion-$PKG_REVISION-$FORK KDEB_PKGVERSION=$kernelversion-${PKG_REVISION}${SOURCE_GITREV:+-$SOURCE_GITREV}/LOCALVERSION=-$PKG_REVISION-$FORK KERNELRELEASE=$kernelversion-$PKG_REVISION-$FORK KDEB_PKGVERSION=$kernelversion-${PKG_REVISION}-${DATE}-${SOURCE_GITREV:+-$SOURCE_GITREV}/g' lib/linux.sh
           cat lib/linux.sh
           sed -i 's#BSP_BRANCH="[^"]*"#BSP_BRANCH="'"$BRANCH"'"#' linux/rk356x/fork.conf
           cat linux/rk356x/fork.conf
