--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -42,7 +42,7 @@ jobs:
           echo 'custom_source_action() {
           git_source https://github.com/openhd/overlays.git
           cp -r $SCRIPT_DIR/.src/overlays/arch $TARGET_DIR
-          }' > blob/main/linux/.common/overlays.sh
+          }' > linux/.common/overlays.sh
           cat linux/rk356x/fork.conf
           cat linux/.common/overlays.sh
 
