--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -43,9 +43,7 @@ jobs:
           git_source https://github.com/openhd/overlays.git main
           cp -r $SCRIPT_DIR/.src/overlays/arch $TARGET_DIR
           }' > linux/.common/overlays.sh
-          cat linux/rk356x/fork.conf
-          cat linux/.common/overlays.sh
-
+          sed -i 's/^custom_source_action "$SCRIPT_DIR" "$TARGET_DIR"$/git clone https:\/\/github.com\/openhd\/overlays "$SCRIPT_DIR" "$TARGET_DIR"/' lib/utils.sh
       - name: build kernel
         run: |
           cd bsp
