--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -43,8 +43,10 @@ jobs:
           git_source https://github.com/openhd/overlays.git main
           cp -r $SCRIPT_DIR/.src/overlays/arch $TARGET_DIR
           }' > linux/.common/overlays.sh
-          sed -i 's/^custom_source_action "$SCRIPT_DIR" "$TARGET_DIR"$/git clone https:\/\/github.com\/openhd\/overlays "$SCRIPT_DIR" "$TARGET_DIR"/' lib/utils.sh
+          sed -i '/^custom_source_action/s/.*/hello world/' lib/utils.sh
           cat lib/utils.sh
+          exit 1
+          
       - name: build kernel
         run: |
           cd bsp
