--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: Clone Wifi drivers
         run: |
           sudo apt update
-          sudo apt install -y git 
+          sudo apt install -y git curl
           mkdir modules
           cd drivers/net/wireless/
           rm -Rf rtl8812au
