--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -40,6 +40,7 @@ jobs:
           sed -i 's/BSP_GIT="https:\/\/github.com\/radxa\/kernel.git"/BSP_GIT="https:\/\/github.com\/openhd\/RK_kernel.git"/' linux/rk356x/fork.conf
           sed -i 's#BSP_BRANCH="[^"]*"#BSP_BRANCH="'"$BRANCH"'"#' linux/rk356x/fork.conf
           COMMITHASH=$(curl -s https://api.github.com/repos/OpenHD/overlays/commits/master | grep '"sha"' | head -n 1 | cut -d '"' -f 4)
+          echo "Commit hash: $COMMITHASH"
           echo 'custom_source_action() {
           git_source https://github.com/openhd/overlays.git '"$COMMITHASH"'
           cp -r $SCRIPT_DIR/.src/overlays/arch $TARGET_DIR
